# filler-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hardhat.config.js  package-lock.json  package.json
.github/workflows/: docker-build.yml
contracts/: IntentSystemSimulator.sol
scripts/: deploy_simulator.js
src/: bitcoin_client.rs  core_lane_client.rs  eip712.rs  filler_bot.rs  http_server.rs  intent_contract.rs  intent_manager.rs  intent_system.rs  intent_types.rs  lib.rs  main.rs  musig_utils.rs  solver_http.rs  test_simulator.rs
tests/: bitcoin_client_tests.rs  core_lane_client_tests.rs  filler_bot_tests.rs  intent_manager_tests.rs
