[package]
name = "lanelayer-filler-bot"
version = "0.1.0"
edition = "2021"
authors = ["LaneLayer Team"]
description = "Filler bot for LaneLayer - fulfills user intents by exchanging laneBTC for BTC"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "sync"] }

# HTTP client for JSON-RPC calls to Core Lane
reqwest = { version = "0.11", features = ["json"] }

# Bitcoin RPC client
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["rand", "serde"] }

# Ethereum/Alloy primitives for Core Lane interaction
alloy-primitives = "1.3"
alloy-consensus = "1.0"
alloy-rlp = "0.3"
alloy-sol-types = "1.3"
alloy-json-abi = "1.3"
alloy-provider = "1.0.32"
alloy-network = "1.0.32"
alloy-transport = "1.0.32"
alloy-signer = "1.0"
alloy-signer-local = "1.0"
alloy-rpc-types = "1.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Hex encoding/decoding
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
uuid = { version = "1.0", features = ["v4", "serde"] }

# ABI encoding/decoding (for intent parsing)
ethabi = "17.0"

# Base58 encoding (for Bitcoin addresses)
bs58 = "0.5"

# CBOR encoding/decoding
ciborium = "0.2"

# Hashing
sha2 = "0.10"
sha3 = "0.10"

# Additional tokio features
bdk_wallet = { version = "2.2.0", features = ["keys-bip39", "rusqlite"] }
bdk_bitcoind_rpc = "0.22.0"
bdk_electrum = { version = "0.23.0", features = ["use-openssl"] }